[package]
name = "mikriting-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.11.0"
actix-web-actors = "4.3.1"
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.40", features = ["derive"] }
config = "0.15.11"
env_logger = "0.11.8"
htpasswd-verify = "0.3.0"
log = "0.4.27"
once_cell = "1.21.3"
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["full"] }
tokio-icmp-echo = "0.4.3"
uuid = { version = "1.17.0", features = ["v4"] }
